# observer_backend

./: .coveragerc  .dockerignore  .env.dev  .env.docker  .env.example  .env.prd  .env.production.template  .env.testing  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Makefile  ObserverDashboard.postman_collection.json  ObserverRepository.postman_collection.json  ObserverRepository.postman_environment.json  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
accounts/: TEST_README.md  admin.py  signals.py  tests.py
accounts/migrations/: 0001_initial.py  0002_emailverificationtoken.py  0003_agreementtype_agreement_useragreement.py  0004_user_email_verified.py  0005_create_cohort_model.py  0006_audittrail.py  0006_failedloginattempt_audittrail.py  0007_passwordresettoken.py  0008_alter_audittrail_category_and_more.py  0009_audittrail_user_identifier_and_more.py  0010_cohort_source_encounter_ids_search_query.py
accounts/models/: __init__.py  agreement_models.py  audit_trail_models.py  cohort_models.py  organization_models.py  profile_models.py  tier_models.py  user_models.py
accounts/services/: __init__.py  audit_constants.py  audit_service.py
accounts/tests/: base.py  test_agreements.py  test_authentication.py  test_cohort_api.py  test_models.py  test_password_change.py  test_password_reset.py  test_permissions.py  test_profile.py  test_registration.py  test_serializers.py  test_signals.py  test_utils.py
backend/: settings.py  urls.py  wsgi.py
backend/settings/: base.py  dev.py  e2e.py  prd.py  test.py
clinical/: TEST_README.md  admin.py  apps.py  managers.py  signals.py  storage_backend.py  tests.py
clinical/migrations/: 0001_initial.py  0002_alter_encounter_tier_id.py  0003_remove_encounter_tier_id_encounter_tier_level.py  (+2 more)
clinical/models/: __init__.py  (+4 more)
dashboard/: admin.py  choices.py  constants.py  context_processors.py  custom_widgets.py  forms.py  graph_models.py  models.py  serializers.py  signals.py  storage_backend.py  urls.py  utils.py  views.py
research/: TEST_README.md  admin.py  tests.py
search/: embeddings.py  es_client.py  index_mappings.py  query_builder.py
shared/: TEST_README.md  address_utils.py  apps.py  authentication.py  choices.py  constants.py  db_router.py  location_choices.py  tests.py  utils.py  validators.py
(+247 files in other folders)
